--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,8 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+[![Travis build status](https://travis-ci.org/w4356y/GeoViz.svg?branch=master)](https://travis-ci.org/w4356y/GeoViz)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/w4356y/GeoViz?branch=master&svg=true)](https://ci.appveyor.com/project/w4356y/GeoViz)
 <!-- badges: end -->
 
 The goal of GeoViz is to ...
@@ -26,30 +28,10 @@ The goal of GeoViz is to ...
 You can install the released version of GeoViz from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-install.packages("GeoViz")
+#install.packages("GeoViz")
 ```
 
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
 
-```{r example}
-library(GeoViz)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
