--- a/README.Rmd
+++ b/README.Rmd
@@ -28,10 +28,10 @@ The goal of GeoViz is to ...
 You can install the released version of GeoViz from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-#install.packages("GeoViz")
+# to be deployed
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+ To be developed
 
