update README and UI of world map

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,17 +21,19 @@ knitr::opts_chunk$set(
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/w4356y/GeoViz?branch=master&svg=true)](https://ci.appveyor.com/project/w4356y/GeoViz)
 <!-- badges: end -->
 
-The goal of GeoViz is to ...
+The goal of GeoViz is to visualize China map and world map in a customized way.
 
 ## Installation
 
-You can install the released version of GeoViz from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of GeoViz from [GITHUB](github.com) with:
 
 ``` r
-# to be deployed
+devtools::install_github("w4356y/GeoViz")
 ```
 
 ## Example
-
- To be developed
+``` r
+library(GeoViz)
+GeoViz::run_app()
+```
 
