Add personal logo to the README file

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,9 @@ knitr::opts_chunk$set(
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/w4356y/GeoViz?branch=master&svg=true)](https://ci.appveyor.com/project/w4356y/GeoViz)
 <!-- badges: end -->
 
+
+![Alt text](inst/app/www/Wei2Go_logo.png?raw=true "Title")
+
 The goal of GeoViz is to visualize China map and world map in a customized way.
 
 ## Installation
